# vocalpy.github.io

./: .buildinfo  .gitignore  CNAME  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build-site.yml
docs/: conf.py  index.md
